@@ -11,6 +11,7 @@ import java.time.LocalTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Component
 @Transactional
@@ -19,30 +20,25 @@ public class ShopManager implements ShopHandler, ShopFinder, ShopkeeperFinder{
     private ShopRepository shopRepository;
     private ShopKeeperAccountRepository shopKeeperAccountRepository;
     private  PlanningRepository planningRepository;
-     private final  MailSender mailSender;
-     private MemberRepository  memberRepository;
 
     @Autowired
     public ShopManager(ShopRepository shopRepository,
                        ShopKeeperAccountRepository shopKeeperAccountRepository,
-                  PlanningRepository  planningRepository,
-                       MailSender mailSender,MemberRepository memberRepository){
+                  PlanningRepository  planningRepository){
         this.shopRepository = shopRepository;
         this.shopKeeperAccountRepository = shopKeeperAccountRepository;
         this.planningRepository=planningRepository;
-        this.mailSender=mailSender;
-        this.memberRepository=memberRepository;
     }
     public Optional<Planning> findPlanningByDay(Shop shop, WeekDay day){
         return shop.getPlanningList().stream().filter(plan-> plan.getDayWorking().equals(day)).findFirst();
     }
     @Override
-    public void modifyPlanning(Shop shop, WeekDay day, LocalTime OpeningHours, LocalTime ClosingHours){
+    public void modifyPlanning(Shop shop, WeekDay day, LocalTime openingHours, LocalTime closingHours){
         Planning planning=null;
         if(shop!= null && day!= null ){
             if( shop.getPlanningList().stream().filter(plan-> plan.getDayWorking().equals(day)).findFirst().isEmpty()){
-                if(OpeningHours!=null && ClosingHours!=null && OpeningHours.isBefore(ClosingHours) ){
-                    planning =new Planning(day,OpeningHours, ClosingHours);
+                if(openingHours!=null && closingHours!=null && openingHours.isBefore(closingHours) ){
+                    planning =new Planning(day,openingHours, closingHours);
                     planning.setShop(shop);
                     shop.addPlanning(planning);
                  }
@@ -50,26 +46,24 @@ public class ShopManager implements ShopHandler, ShopFinder, ShopkeeperFinder{
             else{
                 // update existing planning
                  planning = shop.getPlanningList().stream().filter(plan-> plan.getDayWorking().equals(day)).findFirst().get();
-                if(OpeningHours!=null && ClosingHours!=null){
-                    if( OpeningHours.isBefore(ClosingHours)){
-                        planning.setOpeningHours(OpeningHours);
-                        planning.setClosingHours(ClosingHours);
+                if(openingHours!=null && closingHours!=null){
+                    if( openingHours.isBefore(closingHours)){
+                        planning.setOpeningHours(openingHours);
+                        planning.setClosingHours(closingHours);
                     }
-                }else if(OpeningHours==null && ClosingHours!=null){
-                    if(planning.getOpeningHours().isBefore(ClosingHours)) {
-                        planning.setClosingHours(ClosingHours);
+                }else if(openingHours==null && closingHours!=null){
+                    if(planning.getOpeningHours().isBefore(closingHours)) {
+                        planning.setClosingHours(closingHours);
                     }
-                }else if( OpeningHours!=null  ){
-                    if(OpeningHours.isBefore(planning.getClosingHours())) {
-                        planning.setOpeningHours(OpeningHours);
+                }else if( openingHours!=null  ){
+                    if(openingHours.isBefore(planning.getClosingHours())) {
+                        planning.setOpeningHours(openingHours);
                     }
                 }
             }
         }
         if(planning!=null){
             planningRepository.save(planning);
-            //TODO mettre un vrai mail ^^
-            //mailSender.sendMail(memberRepository.findAll(), new Mail("me@me.com", "Planning modified", "The planning of the shop "+shop.getName()+" has been modified"));
         }
     }
     @Override
@@ -95,7 +89,7 @@ public class ShopManager implements ShopHandler, ShopFinder, ShopkeeperFinder{
         return shopRepository.findById(id);
     }
     public List<Shop> findShopByAddress(String address){
-        return shopRepository.findAll().stream().filter(shop-> shop.getAddress().equals(address)).collect(Collectors.toList());
+        return shopRepository.findAll().stream().filter(shop-> shop.getAddress().equals(address)).toList();
     }
     @Override
     public  ShopKeeperAccount findShopkeeperAccountByMail(String mail) {
